fable/test/valid/parameters_recursive_2.f
      program prog
      parameter(num1=1)
      parameter(num2=num1+1)
      integer nums(num2)
      write(6, *) nums, num1
      end
