fable/test/semantic_error/parameter_array.f
      program prog
      parameter(nums=1)
      integer nums(2)
      end
